--- a/people.html
+++ b/people.html
@@ -37,7 +37,7 @@
     nav ul li a {
       text-decoration: none;
       font-weight: bold;
-      color: #264d9b;
+      color: #0055a4;
     }
 
     nav ul li a:hover {
@@ -52,13 +52,13 @@
 
     header nav a img.logo-main {
       width: 100%;
-      max-width: 320px;
+      max-width: 350px;
       height: auto;
       margin-bottom: 0.5rem;
     }
 
     header nav section figure img {
-      width: 160px;
+      width: 220px;
       margin-top: -0.5rem;
     }
 
@@ -91,8 +91,8 @@
       border-radius: 12px;
       width: 100%;
       height: 360px;
-      object-fit: cover;
-      object-position: top;
+      object-fit: contain;
+      object-position: center;
       background-color: #e0e0e0;
       transition: transform 0.2s ease;
     }
@@ -104,7 +104,7 @@
     footer {
       text-align: center;
       padding: 2rem 1rem;
-      background-color: #1d3557;
+      background-color: #0055a4;
     }
 
     footer img {
@@ -169,7 +169,7 @@
         <img class="people" alt="Hunter" src="images/Hunter.jpg">
         <h3>Hunter Fong</h3>
         <p><strong>DIBRIS, University of Genoa</strong></p>
-        <p>Hunter Fong is a post-doctoral researcher with a background in Psychology, User Experience(UX)/Human Factors, and Applied Statistics. Her primary research aim is to improve the human experience: mentally, socially, and physically. She both researched and taught social, cognitive, and engineering psychology within academic settings prior to conducting HF and robotics research at NASA, Johnson Space Center (Houston), and user experience (UX) research within tech (Dell, Meta, & Google). This blended background has culminated in Hunter combining her interests and experience on the human-robot commensality project COCOA at the University of Genoa.</p>
+        <p>Hunter Fong is a post-doctoral researcher with a background in Psychology, User Experience/Human Factors, and Applied Statistics. Her primary research aim is to improve the human experience: mentally, socially, and physically. She both researched and taught social, cognitive, and engineering psychology within academic settings prior to conducting HF and robotics research at NASA, Johnson Space Center (Houston), and user experience research within tech (Dell, Meta, & Google). This blended background has culminated in Hunter combining her interests and experience on the human-robot commensality project COCOA at the University of Genoa.</p>
       </a>
     </div>
   </main>
