--- a/people.html
+++ b/people.html
@@ -16,22 +16,31 @@
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     }
 
-    header nav {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+    header {
       text-align: center;
-      padding-bottom: 1rem;
+      padding: 1rem 0;
+    }
+
+    header img.logo-main {
+      height: 250px;
+    }
+
+    .logo-wrapper figure img {
+      width: 250px;
+      margin-top: 1rem;
+    }
+
+    nav {
+      margin-top: 1.5rem;
     }
 
     nav ul {
       list-style: none;
       padding: 0;
       display: flex;
-      gap: 1rem;
-      justify-content: center;
+      justify-content: space-around;
       flex-wrap: wrap;
-      margin-top: 1rem;
+      margin: 20px 0;
     }
 
     nav ul li a {
@@ -44,22 +53,13 @@
       text-decoration: underline;
     }
 
-    header .logo-wrapper {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    header nav a img.logo-main {
-      width: 100%;
-      max-width: 350px;
-      height: auto;
-      margin-bottom: 0.5rem;
-    }
-
-    header nav section figure img {
-      width: 220px;
-      margin-top: -0.5rem;
+    .team-heading {
+      text-align: center;
+      margin-top: 2rem;
+      font-size: 2rem;
+      color: #003049;
+      font-weight: 600;
+      letter-spacing: 0.5px;
     }
 
     .team-grid {
@@ -91,8 +91,8 @@
       border-radius: 12px;
       width: 100%;
       height: 360px;
-      object-fit: contain;
-      object-position: center;
+      object-fit: cover;
+      object-position: top;
       background-color: #e0e0e0;
       transition: transform 0.2s ease;
     }
@@ -122,27 +122,26 @@
 
 <body>
   <header>
-    <nav>
-      <div class="logo-wrapper">
-        <a href="index.html"><img alt="Logo" src="cocoa-logo_color.png" class="logo-main"></a>
-        <section>
-          <figure>
-            <img alt="EU Logo" src="EN_Funded_by_the_European_Union_RGB_POS.png">
-          </figure>
-        </section>
-      </div>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="people.html">Team</a></li>
-        <li><a href="projectprogress.html">Project Progress</a></li>
-        <li><a href="results.html">Publications</a></li>
-        <li><a href="outreach.html">Research Dissemination</a></li>
-      </ul>
-    </nav>
+    <a href="index.html"><img alt="Logo" src="cocoa-logo_color.png" class="logo-main"></a>
+    <div class="logo-wrapper">
+      <figure>
+        <img alt="EU Logo" src="EN_Funded_by_the_European_Union_RGB_POS.png">
+      </figure>
+    </div>
   </header>
 
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="people.html">Team</a></li>
+      <li><a href="projectprogress.html">Project Progress</a></li>
+      <li><a href="results.html">Publications</a></li>
+      <li><a href="outreach.html">Research Dissemination</a></li>
+    </ul>
+  </nav>
+
   <main>
-    <h2 style="text-align:center; margin-top: 2rem;">Meet the COCOA Team</h2>
+    <h2 class="team-heading">Meet the COCOA Team</h2>
     <div class="team-grid">
       <a href="https://orcid.org/0000-0002-9933-8583" target="_blank" class="person-link">
         <img class="people" alt="Maurizio" src="images/Maurizio.jpg">
