--- a/people.html
+++ b/people.html
@@ -46,7 +46,7 @@
     nav ul li a {
       text-decoration: none;
       font-weight: bold;
-      color: #0055a4;
+      color: #2a72c4;
     }
 
     nav ul li a:hover {
@@ -56,10 +56,15 @@
     .team-heading {
       text-align: center;
       margin-top: 2rem;
-      font-size: 2rem;
-      color: #003049;
-      font-weight: 600;
-      letter-spacing: 0.5px;
+      font-size: 2.4rem;
+      color: #2a72c4;
+      font-weight: 700;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      letter-spacing: 0.7px;
+      text-transform: uppercase;
+      border-bottom: 2px solid #2a72c4;
+      display: inline-block;
+      padding-bottom: 0.4rem;
     }
 
     .team-grid {
