--- a/people.html
+++ b/people.html
@@ -82,7 +82,7 @@
       margin: 0 auto;
     }
 
-    a.person-link {
+    div.person-link {
       text-decoration: none;
       color: inherit;
       display: block;
@@ -91,6 +91,48 @@
       background-color: #ffffff;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
       transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    div.person-link:hover {
+      transform: scale(1.03);
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+    }
+
+    div.person-link img.people {
+      border-radius: 12px;
+      width: 100%;
+      height: 360px;
+      object-fit: cover;
+      object-position: top;
+      background-color: #e0e0e0;
+      transition: transform 0.2s ease;
+    }
+
+    div.person-link:hover img.people {
+      transform: scale(1.02);
+    }
+
+    .person-link h3 {
+      margin-top: 0.5em;
+    }
+
+    .person-link a {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    .person-link a:hover {
+      text-decoration: underline;
+    }
+
+    .university {
+      display: inline-block;
+      padding: 0.25em 0.6em;
+      border-radius: 12px;
+      background: linear-gradient(to right, #2a72c4, #a4243b);
+      color: white;
+      font-weight: bold;
+      margin: 0.5em 0;
     }
 
     a.person-link:hover {
@@ -154,12 +196,14 @@
   <main>
     <h2 class="team-heading">Meet the COCOA Team</h2>
     <div class="team-grid">
-      <a href="https://orcid.org/0000-0002-9933-8583" target="_blank" class="person-link">
-        <img class="people" alt="Maurizio" src="images/Maurizio.jpg">
-        <h3>Maurizio Mancini</h3>
-        <p><strong>Department of Computer Science, Sapienza University of Rome</strong></p>
-        <p>Maurizio Mancini is an Associate Professor at the Department of Computer Science, Sapienza University of Rome. Earlier, he was Lecturer at the School of Computer Science and IT, University College Cork. He earned his PhD in Computer Science (HCI) in February 2008, at the University of Paris 8. He conducts research in the field of Multimodal Interfaces and Affective/Social Computing, in which he investigates computer interfaces having bodies and nonverbal capabilities, enabling the user to emotionally and socially interact with the machine.</p>
-      </a>
+      <div class="person-link">
+  <a href="https://orcid.org/0000-0002-9933-8583" target="_blank">
+    <img class="people" alt="Maurizio" src="images/Maurizio.jpg">
+    <h3>Maurizio Mancini</h3>
+  </a>
+  <p><strong class="university">Department of Computer Science, Sapienza University of Rome</strong></p>
+  <p>Maurizio Mancini is an Associate Professor at the Department of Computer Science, Sapienza University of Rome. Earlier, he was Lecturer at the School of Computer Science and IT, University College Cork. He earned his PhD in Computer Science (HCI) in February 2008, at the University of Paris 8. He conducts research in the field of Multimodal Interfaces and Affective/Social Computing, in which he investigates computer interfaces having bodies and nonverbal capabilities, enabling the user to emotionally and socially interact with the machine.</p>
+</div>
 
       <a href="https://radoslawniewiadomski.github.io/index.html" target="_blank" class="person-link">
         <img class="people" alt="Radoslaw" src="images/Radek.jpg">
@@ -208,4 +252,3 @@
 </body>
 
 </html>
-
