--- a/people.html
+++ b/people.html
@@ -129,7 +129,7 @@
       display: inline-block;
       padding: 0.25em 0.6em;
       border-radius: 12px;
-      background: linear-gradient(to right, #2a72c4, #a4243b);
+      background: linear-gradient(to right, #2a72c4, #7b1e3e);
       color: white;
       font-weight: bold;
       margin: 0.5em 0;
@@ -205,26 +205,32 @@
   <p>Maurizio Mancini is an Associate Professor at the Department of Computer Science, Sapienza University of Rome. Earlier, he was Lecturer at the School of Computer Science and IT, University College Cork. He earned his PhD in Computer Science (HCI) in February 2008, at the University of Paris 8. He conducts research in the field of Multimodal Interfaces and Affective/Social Computing, in which he investigates computer interfaces having bodies and nonverbal capabilities, enabling the user to emotionally and socially interact with the machine.</p>
 </div>
 
-      <a href="https://radoslawniewiadomski.github.io/index.html" target="_blank" class="person-link">
-        <img class="people" alt="Radoslaw" src="images/Radek.jpg">
-        <h3>Radoslaw Niewiadomski</h3>
-        <p><strong>DIBRIS, University of Genoa</strong></p>
-        <p>Radoslaw Niewiadomski is an Assistant Professor at DIBRIS, University of Genoa (Italy). His research interests include recognition of emotions, nonverbal behavior synthesis and interaction with embodied conversational agents and social robots. He is co-PI of COCOA project aiming to investigate human-human interactions in a commensal setting and to develop artificial commensal companions, and Guest Editor of the Special Research Topic on “Computational Commensality”.</p>
-      </a>
+      <div class="person-link">
+  <a href="https://radoslawniewiadomski.github.io/index.html" target="_blank">
+    <img class="people" alt="Radoslaw" src="images/Radek.jpg">
+    <h3>Radoslaw Niewiadomski</h3>
+  </a>
+  <p><strong class="university">DIBRIS, University of Genoa</strong></p>
+  <p>Radoslaw Niewiadomski is an Assistant Professor at DIBRIS, University of Genoa (Italy). His research interests include recognition of emotions, nonverbal behavior synthesis and interaction with embodied conversational agents and social robots. He is co-PI of COCOA project aiming to investigate human-human interactions in a commensal setting and to develop artificial commensal companions, and Guest Editor of the Special Research Topic on “Computational Commensality”.</p>
+</div>
 
-      <a href="https://orcid.org/0009-0000-5476-9403" target="_blank" class="person-link">
-        <img class="people" alt="Selim" src="images/Selim1.jpg">
-        <h3>Selim Soufargi</h3>
-        <p><strong>Department of Computer Science, Sapienza University of Rome</strong></p>
-        <p>Selim Soufargi is a Ph.D. researcher in computer engineering. He obtained his Ph.D. degree from the university of Calabria, Rende, Italy. Prior to that, he obtained a master’s degree in communication systems from the university of Tunis-Manar. His main research interests focus on big data management, data analysis and machine learning. He has published papers at both national and international levels.</p>
-      </a>
+      <div class="person-link">
+  <a href="https://orcid.org/0009-0000-5476-9403" target="_blank">
+    <img class="people" alt="Selim" src="images/Selim1.jpg">
+    <h3>Selim Soufargi</h3>
+  </a>
+  <p><strong class="university">Department of Computer Science, Sapienza University of Rome</strong></p>
+  <p>Selim Soufargi is a Ph.D. researcher in computer engineering. He obtained his Ph.D. degree from the university of Calabria, Rende, Italy. Prior to that, he obtained a master’s degree in communication systems from the university of Tunis-Manar. His main research interests focus on big data management, data analysis and machine learning. He has published papers at both national and international levels.</p>
+</div>
 
-      <a href="https://orcid.org/0009-0000-0920-7946" target="_blank" class="person-link">
-        <img class="people" alt="Hunter" src="images/Hunter.jpg">
-        <h3>Hunter Fong</h3>
-        <p><strong>DIBRIS, University of Genoa</strong></p>
-        <p>Hunter Fong is a post-doctoral researcher with a background in Psychology, User Experience/Human Factors, and Applied Statistics. Her primary research aim is to improve the human experience: mentally, socially, and physically. She both researched and taught social, cognitive, and engineering psychology within academic settings prior to conducting HF and robotics research at NASA, Johnson Space Center (Houston), and user experience research within tech (Dell, Meta, & Google). This blended background has culminated in Hunter combining her interests and experience on the human-robot commensality project COCOA at the University of Genoa.</p>
-      </a>
+      <div class="person-link">
+  <a href="https://orcid.org/0009-0000-0920-7946" target="_blank">
+    <img class="people" alt="Hunter" src="images/Hunter.jpg">
+    <h3>Hunter Fong</h3>
+  </a>
+  <p><strong class="university">DIBRIS, University of Genoa</strong></p>
+  <p>Hunter Fong is a post-doctoral researcher with a background in Psychology, User Experience/Human Factors, and Applied Statistics. Her primary research aim is to improve the human experience: mentally, socially, and physically. She both researched and taught social, cognitive, and engineering psychology within academic settings prior to conducting HF and robotics research at NASA, Johnson Space Center (Houston), and user experience research within tech (Dell, Meta, & Google). This blended background has culminated in Hunter combining her interests and experience on the human-robot commensality project COCOA at the University of Genoa.</p>
+</div>
     </div>
   </main>
 
