--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <h2>Our Timeline</h2>
             <div style="text-align: center;">
   <a href="projectprogress.html">
-    <img src="images/COCOAtimelineclear.png" alt="COCOA Timeline" style="max-width: 100%; height: auto;">
+    <img src="images/COCOAtimeline.png" alt="COCOA Timeline" style="max-width: 100%; height: auto;">
   </a>
 </div>
 
