--- a/people.html
+++ b/people.html
@@ -47,6 +47,10 @@
       text-decoration: none;
       font-weight: bold;
       color: #57a1dc;
+      border: 2px solid black;
+      padding: 0.25em 0.75em;
+      border-radius: 8px;
+      background-color: #ffd700;
     }
 
     nav ul li a:hover {
@@ -129,7 +133,7 @@
       display: inline-block;
       padding: 0.25em 0.6em;
       border-radius: 12px;
-      background: linear-gradient(to right, #2a72c4, #7b1e3e);
+      background: linear-gradient(to right, #2a72c4, #d12c2c);
       color: white;
       font-weight: bold;
       margin: 0.5em 0;
