--- a/people.html
+++ b/people.html
@@ -46,11 +46,10 @@
     nav ul li a {
       text-decoration: none;
       font-weight: bold;
-      color: #57a1dc;
-      border: 2px solid black;
+      color: black;
+      text-shadow: 1px 1px 0 #ffd700, -1px 1px 0 #ffd700, 1px -1px 0 #ffd700, -1px -1px 0 #ffd700;
       padding: 0.25em 0.75em;
       border-radius: 8px;
-      background-color: #ffd700;
     }
 
     nav ul li a:hover {
@@ -133,7 +132,7 @@
       display: inline-block;
       padding: 0.25em 0.6em;
       border-radius: 12px;
-      background: linear-gradient(to right, #2a72c4, #d12c2c);
+      background: linear-gradient(to right, #2a72c4, #7a1c1c);
       color: white;
       font-weight: bold;
       margin: 0.5em 0;
