--- a/people.html
+++ b/people.html
@@ -47,13 +47,15 @@
       text-decoration: none;
       font-weight: bold;
       color: black;
-      text-shadow: 1px 1px 0 #ffd700, -1px 1px 0 #ffd700, 1px -1px 0 #ffd700, -1px -1px 0 #ffd700;
+      padding: 0.25em 0.75em;
+      border-radius: 8px;
       padding: 0.25em 0.75em;
       border-radius: 8px;
     }
 
     nav ul li a:hover {
       text-decoration: underline;
+      text-shadow: 1px 1px 0 #ffd700, -1px 1px 0 #ffd700, 1px -1px 0 #ffd700, -1px -1px 0 #ffd700;
     }
 
     .team-heading {
