--- a/people.html
+++ b/people.html
@@ -54,7 +54,6 @@
     }
 
     nav ul li a:hover {
-      text-decoration: underline;
       text-shadow: 1px 1px 0 #ffd700, -1px 1px 0 #ffd700, 1px -1px 0 #ffd700, -1px -1px 0 #ffd700;
     }
 
@@ -206,7 +205,7 @@
     <img class="people" alt="Maurizio" src="images/Maurizio.jpg">
     <h3>Maurizio Mancini</h3>
   </a>
-  <p><strong class="university">Department of Computer Science, Sapienza University of Rome</strong></p>
+  <p><a href="https://www.di.uniroma1.it/" target="_blank" class="university">Department of Computer Science, Sapienza University of Rome</a></p>
   <p>Maurizio Mancini is an Associate Professor at the Department of Computer Science, Sapienza University of Rome. Earlier, he was Lecturer at the School of Computer Science and IT, University College Cork. He earned his PhD in Computer Science (HCI) in February 2008, at the University of Paris 8. He conducts research in the field of Multimodal Interfaces and Affective/Social Computing, in which he investigates computer interfaces having bodies and nonverbal capabilities, enabling the user to emotionally and socially interact with the machine.</p>
 </div>
 
@@ -215,7 +214,7 @@
     <img class="people" alt="Radoslaw" src="images/Radek.jpg">
     <h3>Radoslaw Niewiadomski</h3>
   </a>
-  <p><strong class="university">DIBRIS, University of Genoa</strong></p>
+  <p><a href="https://www.dibris.unige.it/" target="_blank" class="university">DIBRIS, University of Genoa</a></p>
   <p>Radoslaw Niewiadomski is an Assistant Professor at DIBRIS, University of Genoa (Italy). His research interests include recognition of emotions, nonverbal behavior synthesis and interaction with embodied conversational agents and social robots. He is co-PI of COCOA project aiming to investigate human-human interactions in a commensal setting and to develop artificial commensal companions, and Guest Editor of the Special Research Topic on “Computational Commensality”.</p>
 </div>
 
