--- a/people.html
+++ b/people.html
@@ -137,6 +137,9 @@
       color: white;
       font-weight: bold;
       margin: 0.5em 0;
+      text-decoration: none;
+      font-weight: bold;
+      margin: 0.5em 0;
     }
 
     a.person-link:hover {
@@ -174,7 +177,10 @@
       margin-top: 1rem;
       color: #ffffff;
     }
-  </style>
+    .university:hover {
+    text-decoration: none;
+  }
+</style>
 </head>
 
 <body>
@@ -223,7 +229,7 @@
     <img class="people" alt="Selim" src="images/Selim1.jpg">
     <h3>Selim Soufargi</h3>
   </a>
-  <p><strong class="university">Department of Computer Science, Sapienza University of Rome</strong></p>
+  <p><a href="https://www.di.uniroma1.it/en/department" target="_blank" class="university">Department of Computer Science, Sapienza University of Rome</a></p>
   <p>Selim Soufargi is a Ph.D. researcher in computer engineering. He obtained his Ph.D. degree from the university of Calabria, Rende, Italy. Prior to that, he obtained a master’s degree in communication systems from the university of Tunis-Manar. His main research interests focus on big data management, data analysis and machine learning. He has published papers at both national and international levels.</p>
 </div>
 
@@ -232,7 +238,7 @@
     <img class="people" alt="Hunter" src="images/Hunter.jpg">
     <h3>Hunter Fong</h3>
   </a>
-  <p><strong class="university">DIBRIS, University of Genoa</strong></p>
+  <p><a href="https://dibris.unige.it" target="_blank" class="university">DIBRIS, University of Genoa</a></p>
   <p>Hunter Fong is a post-doctoral researcher with a background in Psychology, User Experience/Human Factors, and Applied Statistics. Her primary research aim is to improve the human experience: mentally, socially, and physically. She both researched and taught social, cognitive, and engineering psychology within academic settings prior to conducting HF and robotics research at NASA, Johnson Space Center (Houston), and user experience research within tech (Dell, Meta, & Google). This blended background has culminated in Hunter combining her interests and experience on the human-robot commensality project COCOA at the University of Genoa.</p>
 </div>
     </div>
