--- a/people.html
+++ b/people.html
@@ -140,6 +140,9 @@
       text-decoration: none;
       font-weight: bold;
       margin: 0.5em 0;
+      transition: none;
+      font-weight: bold;
+      margin: 0.5em 0;
     }
 
     a.person-link:hover {
@@ -178,8 +181,9 @@
       color: #ffffff;
     }
     .university:hover {
-    text-decoration: none;
-  }
+      color: white;
+      text-decoration: none;
+    }
 </style>
 </head>
 
