--- a/people.html
+++ b/people.html
@@ -182,7 +182,7 @@
     }
     .university:hover {
       color: white;
-      text-decoration: none;
+      text-decoration: underline;
     }
 </style>
 </head>
