--- a/people.html
+++ b/people.html
@@ -134,7 +134,11 @@
       padding: 0.25em 0.6em;
       border-radius: 12px;
       background: linear-gradient(to right, #2a72c4, #7a1c1c);
-      color: white;
+      color: white !important;
+      font-weight: bold;
+      margin: 0.5em 0;
+      text-decoration: none;
+      transition: color 0.2s ease, text-decoration 0.2s ease;
       font-weight: bold;
       margin: 0.5em 0;
       text-decoration: none;
